ZGC: Invalid oop passed to ZBarrierSetRuntime::load_barrier_on_oop_array

XMLWordPrintable

    • b33
    • Verified

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x00007fb7fb168fde, pid=43855, tid=43856
        #
        # JRE version: Java(TM) SE Runtime Environment (17.0+27) (fastdebug build 17-ea+27-LTS-2476)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-ea+27-LTS-2476, mixed mode, tiered, z gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1a21fde] unsigned long ZBarrier::mark<false, true, false, true>(unsigned long)+0x9e
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P %E" (or dumping to /oracle/valhalla2/open/JTwork/scratch/core.43855)
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -XX:CompileCommand=quiet -XX:CompileCommand=compileonly,Test::test -XX:CompileCommand=print,Test::test -XX:+UseZGC -XX:-UseCompressedClassPointers -Xbatch -Xmx128m Test

        Host: prometheus, Intel(R) Core(TM) i7-9850H CPU @ 2.60GHz, 12 cores, 31G, Ubuntu 20.04.2 LTS
        Time: Wed Jul 14 13:47:07 2021 CEST elapsed time: 0.228490 seconds (0d 0h 0m 0s)

        --------------- T H R E A D ---------------

        Current thread (0x00007fb7f402b910): JavaThread "main" [_thread_in_Java, id=43856, stack(0x00007fb7f94ec000,0x00007fb7f95ed000)]

        Stack: [0x00007fb7f94ec000,0x00007fb7f95ed000], sp=0x00007fb7f95eb740, free space=1021k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1a21fde] unsigned long ZBarrier::mark<false, true, false, true>(unsigned long)+0x9e
        V [libjvm.so+0x1a4963b] ZBarrierSetRuntime::load_barrier_on_oop_array(oop*, unsigned long)+0xdb
        v ~StubRoutines::oop_disjoint_arraycopy_uninit

              Assignee:
              Tobias Hartmann
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: