8270461: ZGC: Invalid oop passed to ZBarrierSetRuntime::load_barrier_on_oop_array